--- a/index.html
+++ b/index.html
@@ -345,100 +345,102 @@
                     </ul>
                 </li> <!--AUX. SERVIÇOS GERAIS-->
                 <li class="tree-node parceiro-setor">
-                    <a href="#" class="node-link setor">
-                        <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
-                        <span class="node-label">Sala do Empreendedor</span>
-                        <p class="node-label-cargo">PARCEIRO</p>
+    <a href="#" class="node-link setor">
+        <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
+        <span class="node-label">Sala do Empreendedor</span>
+        <p class="node-label-cargo">PARCEIRO</p>
+    </a>
+    <ul class="funcionarios">
+        <li class="tree-node">
+            <a href="#" class="node-link funcionario">
+                <img src="" alt="Coordenador Image" class="node-image">
+                <span class="node-label">Cadastro Econômico</span>
+            </a>
+            <ul class="funcionarios">
+                <li class="tree-node">
+                    <a href="#" class="node-link funcionario">
+                        <img src="imagens/débora.jpg" alt="Coordenador Image" class="node-image">
+                        <span class="node-label">Débora</span>
+                        <p class="node-label-cargo">SERVIDORA</p>
                     </a>
+                </li> <!-- Fechando o <li> -->
+            </ul>
+        </li> <!-- Fechando o <li> -->
+        <li class="tree-node">
+            <a href="#" class="node-link setor">
+                <img src="" alt="Coordenador Image" class="node-image">
+                <span class="node-label">Mei</span>
+            </a>
+            <ul class="funcionarios">
+                <li class="tree-node">
+                    <a href="#" class="node-link funcionario">
+                        <img src="imagens/tamara.jpg" alt="Coordenador Image" class="node-image">
+                        <span class="node-label">Tamara</span>
+                        <p class="node-label-cargo">SERVIDORA</p>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/elias.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Elias</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/andersson.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Andersson</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
                     <ul class="funcionarios">
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
-                                <img src="" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">Cadastro Econômico</span>
+                                <img src="imagens/tabata.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Tabata</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                            <ul class="coordenadores">
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/débora.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Débora</span>
-                                    <p class="node-label-cargo">SERVIDORA</p>
-                                </a>
-                            </ul>
-                        </li>
+                        </li> <!-- Fechando o <li> -->
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
-                                <img src="" alt="Coordenador Image" class="node-image">
-                                <span class="node-label">Mei</span>
+                                <img src="imagens/bibiana.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Bibiana</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                            <ul class="coordenadores">
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/tamara.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Tamara</span>
-                                    <p class="node-label-cargo">SERVIDORA</p>
-                                </a>
-                                <ul class="funcionarios">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="imagens/elias.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Elias</span>
-                                            <p class="node-label-cargo">SERVIDOR</p>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="imagens/andersson.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">andersson</span>
-                                            <p class="node-label-cargo">SERVIDOR</p>
-                                        </a>
-                                    </li>
-                                    <ul class="sub-funcionarios">
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/tabata.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Tabata</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/bibiana.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Bibiana</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/paulo.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Paulo</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/jean.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Jean</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/joanita.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Joanita</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/debora.jpg" alt="Employee Image" class="node-image">
-                                                <span class="node-label">Debora</span>
-                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </ul>
+                        </li> <!-- Fechando o <li> -->
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/paulo.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Paulo</span>
+                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                            </a>
+                        </li> <!-- Fechando o <li> -->
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/jean.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Jean</span>
+                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                            </a>
+                        </li> <!-- Fechando o <li> -->
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/joanita.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Joanita</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li> <!-- Fechando o <li> -->
+                        <li class="tree-node">
+                            <a href="#" class="node-link funcionario">
+                                <img src="imagens/debora.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Debora</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                            </li> <!-- Fechando o <li> -->
                             </ul>
-                        </li>
+                        </li> <!-- Fechando o <li> -->
                     </ul>
-                </li> <!--SALA DO EMPREENDEDOR-->
+                </li> <!-- Fechando o <li> -->
+            </ul>
+        </li> <!-- Fechando o <li> -->
+    </ul>
+</li>
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="imagens/sine.png" alt="Setor Image" class="node-image">
@@ -603,16 +605,17 @@
                                 <p class="node-label-cargo">COORDENADORA</p>
                             </a>
                             <ul class="coordenadores">
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">?</span>
-                                    <p class="node-label-cargo">AUX. ADMIN.</p>
-                                </a>
-                                <a href="#" class="node-link coordenador">
-                                    <img src="imagens/diogo.jpg" alt="Coordenador Image" class="node-image">
-                                    <span class="node-label">Diogo</span>
-                                    <p class="node-label-cargo">SERVIDOR</p>
-                                </a>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                        <span class="node-label">?</span>
+                                        <p class="node-label-cargo">AUX. ADM.</p>
+                                    </a>
+                                    <a href="#" class="node-link coordenador">
+                                        <img src="imagens/diogo.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Diogo</span>
+                                        <p class="node-label-cargo">FISCAL</p>
+                                    </a>
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
