--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
     </div>
     <input type="text" id="setor-filter" placeholder="Filtrar setores...">
+    <button id="reload-btn" title="Recarregar página">
+        <span class="icon">🔄</span> <!-- Você pode usar um ícone SVG ou de uma biblioteca como FontAwesome -->
+    </button>
     <div class="container">
         <div class="tree">
             <ul class="tree-root">
