--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="tree-root">
                         <li class="tree-node-gestao-setor">
                             <a href="#" class="node-link setor" id="gestao-link">
-                                <img src="imagens/simplifica.png" alt="Setor Image" class="node-image">
+                                <img src="imagens/gestao.png" alt="Setor Image" class="node-image">
                                 <span class="node-label">Gestão</span>
                             </a>
                             <ul class="coordenadores">
@@ -139,7 +139,7 @@
                 </li> <!--TRIAGEM-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/tecnologia.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Tecnologia</span>
                     </a>
                     <ul class="funcionarios">
@@ -333,7 +333,7 @@
                 </li> <!--UNIDADE DE CONCILIAÇÃO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/serviços.png" alt="Setor Image" class="node-image">
+                        <img src="imagens/aux-limpeza.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Aux. Serviços Gerais</span>
                         <p class="node-label-cargo"></p>
                     </a>
@@ -871,6 +871,31 @@
                         </li>
                     </ul>
                 </li> <!--IDENTIDADE-->
+                <li class="tree-node parceiro-setor">
+                        <a href="#" class="node-link setor">
+                                <img src="imagens/logo-receita-federal.png" alt="Setor Image" class="node-image">
+                                <span class="node-label">PROCURADORIA</span>
+                                <p class="node-label-cargo">PARCEIRO</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/barbara.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Barbara</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Pamela</span>
+                                        <p class="node-label-cargo">SERVIDORA</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
