--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </li> <!--CALL CENTER-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <img src="imagens/tramite.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Trâmite</span>
                     </a>
                     <ul class="coordenadores">
@@ -271,7 +271,7 @@
                 </li> <!--TRIBUTOS-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/unidade de conciliação.png" alt="Setor Image" class="node-image">
+                        <img src="imagens/conciliacao.png" alt="Setor Image" class="node-image">
                         <span class="node-label">Unidade de Conciliação</span>
                     </a>
                     <ul class="coordenadores">
@@ -873,7 +873,7 @@
                 </li> <!--IDENTIDADE-->
                 <li class="tree-node parceiro-setor">
                         <a href="#" class="node-link setor">
-                                <img src="imagens/logo-receita-federal.png" alt="Setor Image" class="node-image">
+                                <img src="imagens/procuradoria.png" alt="Setor Image" class="node-image">
                                 <span class="node-label">PROCURADORIA</span>
                                 <p class="node-label-cargo">PARCEIRO</p>
                             </a>
