--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </li> <!--AUX. SERVIÇOS GERAIS-->
                 <li class="tree-node parceiro-setor">
     <a href="#" class="node-link setor">
-        <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
+        <img src="imagens/empreendedor.png" alt="Setor Image" class="node-image">
         <span class="node-label">Sala do Empreendedor</span>
         <p class="node-label-cargo">PARCEIRO</p>
     </a>
