--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <ul class="funcionarios">
         <li class="tree-node">
             <a href="#" class="node-link funcionario">
-                <img src="" alt="Coordenador Image" class="node-image">
+                <img src="imagens/cad.png" alt="Coordenador Image" class="node-image">
                 <span class="node-label">Cadastro Econômico</span>
             </a>
             <ul class="funcionarios">
@@ -365,7 +365,7 @@
         </li> <!-- Fechando o <li> -->
         <li class="tree-node">
             <a href="#" class="node-link setor">
-                <img src="" alt="Coordenador Image" class="node-image">
+                <img src="imagens/mei.png" alt="Coordenador Image" class="node-image">
                 <span class="node-label">Mei</span>
             </a>
             <ul class="funcionarios">
@@ -871,20 +871,26 @@
                                 <span class="node-label">PROCURADORIA</span>
                                 <p class="node-label-cargo">PARCEIRO</p>
                             </a>
-                            <ul class="funcionarios">
+                            <ul class="coordenadores">
                                 <li class="tree-node">
-                                    <a href="#" class="node-link">
+                                    <a href="#" class="node-link coordenador">
                                         <img src="imagens/barbara.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Barbara</span>
                                         <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
-                                </li>
-                                <li class="tree-node">
-                                    <a href="#" class="node-link">
+                                    <a href="#" class="node-link coordenador">
                                         <img src="imagens/none.png" alt="Employee Image" class="node-image">
                                         <span class="node-label">Pamela</span>
                                         <p class="node-label-cargo">SERVIDORA</p>
                                     </a>
+                                    <ul class="funcionarios">
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/lana-two.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Lana</span>
+                                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
                                 </li>
                             </ul>
                         </li>
