add: comentarios para cada setor

--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
                         <span class="node-label">Débora</span>
                         <p class="node-label-cargo">SERVIDORA</p>
                     </a>
-                </li> <!-- Fechando o <li> -->
+                </li> 
             </ul>
-        </li> <!-- Fechando o <li> -->
+        </li> 
         <li class="tree-node">
             <a href="#" class="node-link setor">
                 <img src="imagens/mei.png" alt="Coordenador Image" class="node-image">
@@ -394,48 +394,62 @@
                                 <span class="node-label">Tabata</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
                                 <img src="imagens/bibiana.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Bibiana</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
                                 <img src="imagens/paulo.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Paulo</span>
                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
                             </a>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
                                 <img src="imagens/jean.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Jean</span>
                                 <p class="node-label-cargo">ESTAGIÁRIO</p>
                             </a>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
                                 <img src="imagens/joanita.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Joanita</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                         <li class="tree-node">
                             <a href="#" class="node-link funcionario">
                                 <img src="imagens/debora.jpg" alt="Employee Image" class="node-image">
                                 <span class="node-label">Debora</span>
                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                             </a>
-                            </li> <!-- Fechando o <li> -->
+                            </li>
+                            <li class="tree-node">
+                                <a href="#" class="node-link funcionario">
+                                    <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                    <span class="node-label">?</span>
+                                    <p class="node-label-cargo">ESTAGIÁRIO(A)</p>
+                                </a>
+                                </li> 
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link funcionario">
+                                        <img src="imagens/none.png" alt="Employee Image" class="node-image">
+                                        <span class="node-label">?</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO(A)</p>
+                                    </a>
+                                </li>
                             </ul>
-                        </li> <!-- Fechando o <li> -->
+                        </li> 
                     </ul>
-                </li> <!-- Fechando o <li> -->
+                </li> 
             </ul>
-        </li> <!-- Fechando o <li> -->
+        </li> 
     </ul>
 </li>
                 <li class="tree-node parceiro-setor">
