--- a/index.html
+++ b/index.html
@@ -4,29 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.3">
-    <title>Organograma Modelo</title>
+    <title>SIMPLIFICA TIMBÓ: ORGANOGRAMA</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="imagens/BandeiraDeTimbo.jpg">
 </head>
 
 <body>
     <nav class="menu">
+        <div class = "simplifica-logo">
+            <img src="imagens/simplifica.png" alt="simplifica-timbo">
+        </div>
         <ul>
-            <li class="menu-item"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Sobre</a></li>
-            <li class="menu-item"><a href="#">Setores</a></li>
-            <li class="menu-item"><a href="#">Contato</a></li>
+            <li class="menu-item"><a href="index.html">Home</a></li>
+            <li class="menu-item"><a href="sobre.html">Sobre</a></li>
         </ul>
     </nav>
     <div class="titulo-page">
-        <h1>Organograma - Simplifica</h1>
+        <h1>Organograma - Simplifica Timbó</h1>
     </div>
     <button id="mostrar-tudo">Mostrar Tudo</button>
-    <input type="text" id="setor-filter" placeholder="Filtrar setores...">
+    <input type="text" id="setor-filter" placeholder="🔍 Filtrar setores...">
+
     <button id="reload-btn" title="Recarregar página">
-        <span class="icon">🔄</span> <!-- Você pode usar um ícone SVG ou de uma biblioteca como FontAwesome -->
+        <span class="icon">🔄</span>
     </button>
+
     <div class="container">
         <div class="tree">
             <ul class="tree-root">
@@ -957,7 +961,6 @@
         </div>
     </div>
     <script src="js/script.js"></script>
-    <script src="js/codigo.js"></script>
 </body>
 
 </html>
