mod:foto epagri

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--TRIAGEM-->
+                </li>
                 <!--TI-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -158,7 +158,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--TI-->
+                </li>
                 <!--CALL CENTER-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -195,7 +195,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--CALL CENTER-->
+                </li>
                 <!--TRÂMITE-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -211,7 +211,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--TRÂMITE-->
+                </li>
                 <!--TRIBUTOS-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -271,7 +271,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--TRIBUTOS-->
+                </li>
                 <!--UNIDADE DE CONCILIAÇÃO-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -334,7 +334,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--UNIDADE DE CONCILIAÇÃO-->
+                </li>
                 <!--AUX. SERVIÇOS GERAIS-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -352,7 +352,6 @@
                         </li>
                     </ul>
                 </li>
-                <!--AUX. SERVIÇOS GERAIS-->
                 <!--DEMUTRAN-->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -387,7 +386,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li><!--DEMUTRAN-->
+                </li>
                 <!-- SALA DO EMPREENDEDOR -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -507,7 +506,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!-- SALA DO EMPREENDEDOR -->
+                </li>
                 <!-- PROCURADORIA -->
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -613,7 +612,7 @@
                                     <ul class="funcionarios">
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/lana-two.jpg" alt="Employee Image" class="node-image">
+                                                <img src="imagens/lana.jpg" alt="Employee Image" class="node-image">
                                                 <span class="node-label">Lana</span>
                                                 <p class="node-label-cargo">ESTAGIÁRIA</p>
                                             </a>
@@ -624,8 +623,7 @@
                         </li>
                     </ul>
                 </li>
-                    <!-- PROCURADORIA -->
-                    <!--SINE-->
+                <!--SINE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="imagens/sine.png" alt="Setor Image" class="node-image">
@@ -656,7 +654,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--SINE-->
+                </li>
                 <!--ICASA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -673,7 +671,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--ICASA-->
+                </li>
                 <!--Epagri-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -684,14 +682,14 @@
                     <ul class="coordenadores">
                         <li class="tree-node">
                             <a href="#" class="node-link coordenador">
-                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <img src="imagens/katia.jpg" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">Katia</span>
                                 <p class="node-label-cargo">SERVIDORA</p>
                             </a>
                         </li>
                         <li class="tree-node">
                             <a href="#" class="node-link coordenador">
-                                <img src="images/2.jpg" alt="Coordenador Image" class="node-image">
+                                <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
                                 <span class="node-label">Valdomiro</span>
                                 <p class="node-label-cargo">SERVIDORA</p>
                             </a>
