--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--Epagri-->
+                </li>
                 <!--Foto CNH-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -712,7 +712,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--Foto CNH-->
+                </li>
                 <!--CITRAN-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -745,7 +745,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--CITRAN-->
+                </li>
                 <!--SAMAE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -778,11 +778,11 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--SAMAE-->
+                </li>
                 <!--RECEITA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/logo-receita-federal.png" alt="Setor Image" class="node-image">
+                        <img src="imagens/receita-federal.png" alt="Setor Image" class="node-image">
                         <span class="node-label">RECEITA FEDERAL</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
@@ -847,11 +847,11 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--RECEITA-->
+                </li>
                 <!--JUNTA-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
-                        <img src="imagens/junta-militar-logo.png" alt="Setor Image" class="node-image">
+                        <img src="imagens/junta-militar.png" alt="Setor Image" class="node-image">
                         <span class="node-label">JUNTA MILITAR</span>
                         <p class="node-label-cargo">PARCEIRO</p>
                     </a>
@@ -864,7 +864,7 @@
                             </a>
                         </li>
                     </ul>
-                </li> <!--JUNTA-->
+                </li>
                 <!--IDENTIDADE-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
@@ -952,7 +952,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li> <!--IDENTIDADE-->
+                </li>
             </ul>
             </li>
             </ul>
