--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                                     </a>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
-                                        <img src="imagens/none.jpg" alt="Employee Image" class="node-image">
+                                        <img src="imagens/none.png" alt="Employee Image" class="node-image">
                                         <span class="node-label">?</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
